<resources>
    <string name="app_name">Jenius</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete">Yes, Delete</string>
    <string name="cancel">Cancel</string>
    <string name="add">+ Add</string>
    <string name="add_contact">Add Contact</string>
    <string name="save">Save</string>
    <string name="text_name">Name</string>
    <string name="text_name_hint">Full Name</string>
    <string name="text_first_name">First Name</string>
    <string name="text_first_name_hint">John</string>
    <string name="text_last_name">Last Name</string>
    <string name="text_last_name_hint">Doe</string>
    <string name="text_age_hint">20</string>
    <string name="text_age">Age</string>
    <string name="edit_contact">Edit Contact</string>
    <string name="update">Update</string>
    <string name="text_no_internet">No Internet Connection</string>
    <string name="text_no_internet_description">You are not connected to the internet. \nMake sure Wi-Fi is on, Airplane Mode is off and try again</string>
    <string name="retry">Retry</string>
</resources>
